Fixed the excessive gap in search results

--- a/app/assets/stylesheets/species/additions.scss
+++ b/app/assets/stylesheets/species/additions.scss
@@ -23,7 +23,7 @@ span.distrib_reference {
 }
 
 .container {
-	.result-block {
+	.no-results {
 		padding: 80px 0;
 		margin-top: -18px;
 		p {
